<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reporter</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createProject">Create Project</string>
    <string name="createTask">Create Task</string>
    <string name="projectName">Project name</string>
    <string name="projectDescription">Project description</string>
    <string name="time">Time</string>
    <string name="activities">Activities</string>
    <string name="activityPrompt">Choose an activity</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="enterPassword">Enter the password</string>
    <string name="back">⇐</string>
    <string name="next">⇒</string>
    <string name="taskName">Task name</string>
    <string name="taskDescription">Task description</string>
    <string name="about_text">
        This application is useful for developers and people that work with development.
        User can create his projects per day and add tasks for them.There are 4 categories for project tasks:
        Self development,Working time, Extra time and Team time. User can plan his projects using a calendar system in
        the application.
    </string>
    <string name="aboutButton">About</string>
    <string name="about_title">About</string>
    <string name="welcome">Welcome to Reporter!</string>
    <string name="register_form">Registration form</string>
    <string name="projectList">Project list</string>
    <string name="projectCreate">Creating new project</string>
    <string name="taskCreate">Creating new task</string>
    <string name="taskList">Task list</string>
    <string name="enterName">Enter the name</string>
    <string name="project_details">Project details</string>
    <string name="task_details">Task details</string>
</resources>
