<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffff" >
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/taskName"
                    android:textSize="25dp"
                    android:textColor="#000000"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskName"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/taskDescription"
                    android:textSize="25dp"
                    android:textColor="#000000"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lines="5"
                    android:id="@+id/taskDescription"
                    android:singleLine="false"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activities"
                    android:textSize="25dp"
                    android:textColor="#000000"/>
            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/activityList"
                    android:prompt="@string/activityPrompt"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textSize="25dp"
                    android:textColor="#000000"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <com.calendar.reporter.helper.HourPicker
                        android:id="@+id/hourPicker"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                </com.calendar.reporter.helper.HourPicker>

                <com.calendar.reporter.helper.MinutePicker
                        android:id="@+id/minutePicker"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                </com.calendar.reporter.helper.MinutePicker>
            </LinearLayout>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/createTask"
                    android:id="@+id/createTask"
                    android:textColor="#ffffff"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>