<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        android:background="@drawable/backrepeat">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >
        <EditText
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/projectName"
                android:hint="@string/projectName"/>
        <EditText
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="10"
                android:id="@+id/projectDescription"
                android:singleLine="false"
                android:hint="@string/projectDescription"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/createProject"
                android:id="@+id/createProject"
                android:textSize="23dp"/>
    </LinearLayout>
</ScrollView>
